--- a/conf/mendel.config
+++ b/conf/mendel.config
@@ -3,7 +3,12 @@
  * -------------------------------------------------
  */
 
+singularity {
+  enabled = true
+}
+
 process {
+  beforeScript = 'module load Singularity'
   executor = 'pbs'
 
   withName: MethylScore_deduplicate {
