--- a/conf/mendel.config
+++ b/conf/mendel.config
@@ -5,10 +5,64 @@
 
 process {
   executor = 'pbs'
-  cpus = { 2 * task.attempt }
-  memory = { 8.GB * task.attempt }
-  time = { 4.h * task.attempt }
-  
+
+  withName: MethylScore_deduplicate {
+	module = ['BamTools/2.4.0-foss-2016a', 'SAMtools/1.3.1-foss-2016a', 'Java/1.8.0_112']
+  	cpus = { 1 * task.attempt }
+  	memory = { 8.GB * task.attempt }
+  	time = { 8.h * task.attempt }
+  }
+
+  withName: MethylScore_callConsensus {
+	module = ['SAMtools/1.3.1-foss-2016a', 'Perl/5.22.1-foss-2016a', 'MethylExtract/1.9.1']
+  	cpus = { 1 * task.attempt }
+  	memory = { 8.GB * task.attempt }
+  	time = { 8.h * task.attempt }
+  }
+
+  withName: MethylScore_chromosomalmatrix {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_genomematrix {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_callMRs {
+  	cpus = { 1 * task.attempt }
+  	memory = { 8.GB * task.attempt }
+  	time = { 4.h * task.attempt }
+  }
+
+  withName: MethylScore_igv {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_splitMRs {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_callDMRs {
+	module = ['Python/2.7.11-foss-2016a']
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 2.h * task.attempt }
+  }
+
+  withName: MethylScore_mergeDMRs {
+	module = ['Python/2.7.11-foss-2016a']
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
   errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
   maxRetries = 3
   maxErrors = '-1'
