restructure configuration profiles, add conda profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,4 +12,12 @@ profiles {
   standard {
     includeConfig 'conf/mendel.config'
   }
+  singularity {
+    includeConfig 'conf/singularity.config'
+    includeConfig 'conf/base.config'
+  }
+  conda {
+    includeConfig 'conf/conda.config'
+    includeConfig 'conf/base.config'
+  }
 }
