--- a/conf/mendel.config
+++ b/conf/mendel.config
@@ -7,7 +7,7 @@ process {
   executor = 'pbs'
 
   withName: MethylScore_deduplicate {
-	module = ['BamTools/2.4.0-foss-2016a', 'SAMtools/1.3.1-foss-2016a', 'Java/1.8.0_112']
+	module = ['BamTools/2.4.0-foss-2016a', 'SAMtools/1.3.1-foss-2016a', 'BEDTools/2.27.1-foss-2016b', 'Java/1.8.0_112']
   	cpus = { 1 * task.attempt }
   	memory = { 8.GB * task.attempt }
   	time = { 8.h * task.attempt }
