workaround: hardcode path to picard tools
the environment module on MENDEL does not export the path to the jar file, it only sets a variable.

--- a/conf/conda.config
+++ b/conf/conda.config
@@ -1,2 +1,67 @@
-process.module = ["Miniconda3"]
-process.conda = "$baseDir/environment.yaml"
+/* -------------------------------------------------
+ * Nextflow config file for conda profile
+ * -------------------------------------------------
+ */
+
+env.PICARD_PATH = "\$(dirname \$(readlink -f \$(which picard)))"
+process {
+  executor = 'pbs'
+  module = ['Miniconda3']
+
+  withName: MethylScore_deduplicate {
+  	cpus = { 1 * task.attempt }
+  	memory = { 8.GB * task.attempt }
+  	time = { 8.h * task.attempt }
+  }
+
+  withName: MethylScore_callConsensus {
+  	cpus = { 1 * task.attempt }
+  	memory = { 8.GB * task.attempt }
+  	time = { 8.h * task.attempt }
+  }
+
+  withName: MethylScore_chromosomalmatrix {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_genomematrix {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_callMRs {
+  	cpus = { 1 * task.attempt }
+  	memory = { 8.GB * task.attempt }
+  	time = { 4.h * task.attempt }
+  }
+
+  withName: MethylScore_igv {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_splitMRs {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_callDMRs {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 2.h * task.attempt }
+  }
+
+  withName: MethylScore_mergeDMRs {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+  errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
+  maxRetries = 3
+  maxErrors = '-1'
+}
