--- a/conf/singularity.config
+++ b/conf/singularity.config
@@ -1,9 +1,71 @@
-process.container = "/lustre/scratch/projects/becker_common/singularity_images/MethylScore.simg"
+/* -------------------------------------------------
+ * Nextflow config file for singularity profile
+ * -------------------------------------------------
+ */
 
 singularity {
   enabled = true
 }
 
+env.PICARD_PATH = "\$(dirname \$(readlink -f \$(which picard)))"
 process {
-  beforeScript = 'module load Singularity'
+  executor = 'pbs'
+  module = ['Singularity']
+
+  withName: MethylScore_deduplicate {
+  	cpus = { 1 * task.attempt }
+  	memory = { 8.GB * task.attempt }
+  	time = { 8.h * task.attempt }
+  }
+
+  withName: MethylScore_callConsensus {
+  	cpus = { 1 * task.attempt }
+  	memory = { 8.GB * task.attempt }
+  	time = { 8.h * task.attempt }
+  }
+
+  withName: MethylScore_chromosomalmatrix {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_genomematrix {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_callMRs {
+  	cpus = { 1 * task.attempt }
+  	memory = { 8.GB * task.attempt }
+  	time = { 4.h * task.attempt }
+  }
+
+  withName: MethylScore_igv {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_splitMRs {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_callDMRs {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 2.h * task.attempt }
+  }
+
+  withName: MethylScore_mergeDMRs {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+  errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
+  maxRetries = 3
+  maxErrors = '-1'
 }
