--- a/nextflow.config
+++ b/nextflow.config
@@ -13,11 +13,11 @@ profiles {
     includeConfig 'conf/mendel.config'
   }
   singularity {
+    process.container = "/lustre/scratch/projects/becker_common/singularity_images/MethylScore.simg"
     includeConfig 'conf/singularity.config'
-    includeConfig 'conf/base.config'
   }
   conda {
+    process.conda = "$baseDir/environment.yaml"
     includeConfig 'conf/conda.config'
-    includeConfig 'conf/base.config'
   }
 }
