--- a/conf/mendel.config
+++ b/conf/mendel.config
@@ -3,11 +3,12 @@
  * -------------------------------------------------
  */
 
+env.PICARD_PATH = "/net/gmi.oeaw.ac.at/software/mendel/intel-x86_64-sandybridge-avx/software/picard/2.6.0-Java-1.8.0_131"
 process {
   executor = 'pbs'
 
   withName: MethylScore_deduplicate {
-	module = ['BamTools/2.4.0-foss-2016a', 'SAMtools/1.3.1-foss-2016a', 'BEDTools/2.27.1-foss-2016b', 'Java/1.8.0_112']
+	module = ['picard/2.6.0-Java-1.8.0_131', 'BamTools/2.4.0-foss-2016a', 'SAMtools/1.3.1-foss-2016a', 'BEDTools/2.27.1-foss-2016b']
   	cpus = { 1 * task.attempt }
   	memory = { 8.GB * task.attempt }
   	time = { 8.h * task.attempt }
