add missing tabix dependency for running on MENDEL cluster

--- a/conf/mendel.config
+++ b/conf/mendel.config
@@ -52,7 +52,7 @@ process {
   }
 
   withName: MethylScore_callDMRs {
-	module = ['Python/2.7.11-foss-2016a']
+	module = ['Python/2.7.11-foss-2016a','tabix']
   	cpus = { 1 * task.attempt }
   	memory = { 1.GB * task.attempt }
   	time = { 2.h * task.attempt }
