--- a/environment.yaml
+++ b/environment.yaml
@@ -4,11 +4,12 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - samtools
-  - tabix
-  - bamtools
-  - bedtools
-  - picard
-  - scipy
-  - perl
-  - methylextract
+  - python=2.7
+  - samtools=1.9
+  - tabix=0.2.5
+  - bamtools=2.5.1
+  - bedtools=2.27.1
+  - picard=2.18.11
+  - scipy=1.1.0
+  - perl=5.26.2
+  - methylextract=1.9.1
