set PAR_TEMP to working directory
this avoids cluttering the host /tmp (which might be limited in quota). Setting this to the working directory for each execution also avoids lock contentions that would arise when running multiple nextflow pipeline instances at the same time

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,11 @@
  * name here.
  */
 
+env {
+   PAR_TEMP = "${PWD}/work"
+   PAR_GLOBAL_TMPDIR = "${PWD}/work"
+}
+
 profiles {
   standard {
     includeConfig 'conf/mendel.config'
