--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,14 @@
  * name here.
  */
 
+manifest {
+    homePage = 'https://github.com/Gregor-Mendel-Institute/MethylScore-nf'
+    description = 'A nextflow implementation of Computomics' MethylScore pipeline'
+    mainScript = 'MethylScore.nf'
+    nextflowVersion = '0.30+'
+}
+
+
 env {
    PAR_TEMP = "${PWD}/work"
    PAR_GLOBAL_TMPDIR = "${PWD}/work"
