adapt to naming conventions

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@
 manifest {
     homePage = 'https://github.com/Gregor-Mendel-Institute/MethylScore-nf'
     description = 'A nextflow implementation of Computomics' MethylScore pipeline'
-    mainScript = 'MethylScore.nf'
+    mainScript = 'main.nf'
     nextflowVersion = '0.30+'
 }
 
