--- a/nextflow.config
+++ b/nextflow.config
@@ -10,7 +10,7 @@
 
 manifest {
     homePage = 'https://github.com/Gregor-Mendel-Institute/MethylScore-nf'
-    description = 'A nextflow implementation of Computomics' MethylScore pipeline'
+    description = "A nextflow implementation of Computomics' MethylScore pipeline"
     mainScript = 'main.nf'
     nextflowVersion = '0.30+'
 }
