--- a/nextflow.config
+++ b/nextflow.config
@@ -34,3 +34,9 @@ profiles {
     includeConfig 'conf/conda.config'
   }
 }
+
+trace {
+    enabled = true
+    file = 'pipeline_trace.txt'
+    fields = 'task_id,name,status,exit,realtime,%cpu,%mem,rss,peak_rss,peak_vmem'
+}
