use picard shell wrapper from bioconda
as we're not using MENDEL's environment modules anymore, we don't have to figure out the path to the picard jar file anymore and can safely rely on the picard shell wrapper which is found in the PATH of conda environments (both singularity and conda profiles use bioconda recipes to pull dependencies)

--- a/conf/conda.config
+++ b/conf/conda.config
@@ -3,10 +3,21 @@
  * -------------------------------------------------
  */
 
-env.PICARD_PATH = "\$(dirname \$(readlink -f \$(which picard)))"
 process {
   executor = 'pbs'
   module = ['Miniconda3']
+
+  withName: MethylScore_filterQC {
+        cpus = { 1 * task.attempt }
+        memory = { 1.GB * task.attempt }
+        time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_mergeReplicates {
+        cpus = { 1 * task.attempt }
+        memory = {1.GB * task.attempt }
+        time = { 1.h * task.attempt }
+  }
 
   withName: MethylScore_deduplicate {
   	cpus = { 1 * task.attempt }
