--- a/conf/singularity.config
+++ b/conf/singularity.config
@@ -7,10 +7,21 @@ singularity {
   enabled = true
 }
 
-env.PICARD_PATH = "\$(dirname \$(readlink -f \$(which picard)))"
 process {
   executor = 'pbs'
   module = ['Singularity']
+
+  withName: MethylScore_filterQC {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_mergeReplicates {
+  	cpus = { 1 * task.attempt }
+  	memory = {1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
 
   withName: MethylScore_deduplicate {
   	cpus = { 1 * task.attempt }
