simplify configuration and set executor to pbspro

--- a/conf/mendel.config
+++ b/conf/mendel.config
@@ -4,7 +4,19 @@
  */
 
 process {
-  executor = 'pbs'
+  executor = 'pbspro'
+
+  withName: MethylScore_filterQC {
+  	cpus = { 1 * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MethylScore_mergeReplicates {
+  	cpus = { 1 * task.attempt }
+  	memory = {1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
 
   withName: MethylScore_deduplicate {
   	cpus = { 1 * task.attempt }
