--- a/nextflow.config
+++ b/nextflow.config
@@ -15,7 +15,6 @@ manifest {
     nextflowVersion = '0.30+'
 }
 
-
 env {
    PAR_TEMP = "${PWD}/work"
    PAR_GLOBAL_TMPDIR = "${PWD}/work"
@@ -24,10 +23,12 @@ env {
 profiles {
   standard {
     process.container = "/lustre/scratch/projects/becker_common/singularity_images/MethylScore.simg"
+    includeConfig 'conf/mendel.config'
     includeConfig 'conf/singularity.config'
   }
   conda {
     process.conda = "$baseDir/environment.yaml"
+    includeConfig 'conf/mendel.config'
     includeConfig 'conf/conda.config'
   }
 }
