--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@ manifest {
     homePage = 'https://github.com/Gregor-Mendel-Institute/MethylScore-nf'
     description = "A nextflow implementation of Computomics' MethylScore pipeline"
     mainScript = 'main.nf'
-    nextflowVersion = '0.30+'
+    nextflowVersion = '>=19.01.0'
 }
 
 env {
