support calling DMRs from bedGraph input
this implements specifying bedGraphs as input files for the MR and DMR
calling steps with the `--BEDGRAPH` flag

additional changes:

* added a process to merge contexts (in case of bedGraph input, this
  assumes the sampleID(first column of the samplesheet) is the same
  for different methylation contexts)
  Note that is different from bam file input, where bam files are
  merged when sampleIDs match.
* refactored input channels to implement sample indexing early on.
  this should fix a bug where pipeline execution couldn't be resumed
* used groovy/nextflow methods to create sample files required by
  different pipeline processes. This replaces for loops implemented
  in bash.

--- a/conf/mendel.config
+++ b/conf/mendel.config
@@ -30,6 +30,12 @@ process {
   	time = { 8.h * task.attempt }
   }
 
+  withName: MethylScore_mergeContexts {
+  	cpus = { 1 * task.attempt }
+  	memory = {1.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
   withName: MethylScore_chromosomalmatrix {
   	cpus = { 1 * task.attempt }
   	memory = { 1.GB * task.attempt }
