add local profile and update README.md
... and rework the config profiles.
Most importantly, profiles now have to be specified when running the pipeline

e.g. with `-profile local,conda`

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,15 +20,11 @@ env {
    PAR_GLOBAL_TMPDIR = "${PWD}/work"
 }
 
+includeConfig 'conf/base.config'
+
 profiles {
-  standard {
-    process.container = "/lustre/scratch/projects/becker_common/singularity_images/MethylScore.simg"
-    includeConfig 'conf/mendel.config'
-    includeConfig 'conf/singularity.config'
-  }
-  conda {
-    process.conda = "$baseDir/environment.yaml"
-    includeConfig 'conf/mendel.config'
-    includeConfig 'conf/conda.config'
-  }
+  local { process.executor = 'local' }
+  mendel { includeConfig 'conf/mendel.config' }
+  singularity { singularity.enabled = true }
+  conda { process.conda = "$baseDir/environment.yaml" }
 }
