--- a/conf/mendel.config
+++ b/conf/mendel.config
@@ -5,73 +5,6 @@
 
 process {
   executor = 'pbspro'
-
-  withName: MethylScore_filterQC {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-
-  withName: MethylScore_mergeReplicates {
-  	cpus = { 1 * task.attempt }
-  	memory = {1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-
-  withName: MethylScore_deduplicate {
-  	cpus = { 1 * task.attempt }
-  	memory = { 8.GB * task.attempt }
-  	time = { 8.h * task.attempt }
-  }
-
-  withName: MethylScore_callConsensus {
-  	cpus = { 1 * task.attempt }
-  	memory = { 8.GB * task.attempt }
-  	time = { 8.h * task.attempt }
-  }
-
-  withName: MethylScore_mergeContexts {
-  	cpus = { 1 * task.attempt }
-  	memory = {1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-
-  withName: MethylScore_chromosomalmatrix {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-
-  withName: MethylScore_callMRs {
-  	cpus = { 1 * task.attempt }
-  	memory = { 8.GB * task.attempt }
-  	time = { 4.h * task.attempt }
-  }
-
-  withName: MethylScore_igv {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-
-  withName: MethylScore_splitMRs {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-
-  withName: MethylScore_callDMRs {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 2.h * task.attempt }
-  }
-
-  withName: MethylScore_mergeDMRs {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
-  }
-  errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
-  maxRetries = 3
-  maxErrors = '-1'
+  container = "/lustre/scratch/projects/becker_common/singularity_images/MethylScore.simg"
+  module = 'Miniconda3:Singularity'
 }
