pull container from dockerhub by default

--- a/conf/mendel.config
+++ b/conf/mendel.config
@@ -3,8 +3,13 @@
  * -------------------------------------------------
  */
 
+env {
+   PAR_TEMP = "${PWD}/work"
+   PAR_GLOBAL_TMPDIR = "${PWD}/work"
+}
+
 process {
   executor = 'pbspro'
-  container = "/lustre/scratch/projects/becker_common/singularity_images/MethylScore.simg"
+  container = '/lustre/scratch/projects/becker_common/singularity_images/MethylScore.simg'
   module = 'Miniconda3:Singularity'
 }
