add docker profile (useful for local runs)

--- a/nextflow.config
+++ b/nextflow.config
@@ -24,5 +24,6 @@ profiles {
   mendel { includeConfig 'conf/mendel.config' }
   cbe { includeConfig 'conf/cbe.config' }
   singularity { singularity.enabled = true }
+  docker { docker.enabled = true }
   conda { process.conda = "$baseDir/environment.yaml" }
 }
