set up Travis (#1)
* update README

* don't quote params

* add testing profile

* limit resources for testing profile

* lower initial resource requests

* Update .travis.yml

* move all scripts to bin/

* remove unused params.CLUSTER_PROJECT

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,5 @@ install:
   - wget -qO- get.nextflow.io | bash
   - sudo ln -s /tmp/nextflow/nextflow /usr/local/bin/nextflow
 
-env:
-  - SHEET='https://github.com/Gregor-Mendel-Institute/MethylScore-nf/raw/travis/samplesheet.tsv'
-  - FASTA='https://github.com/Gregor-Mendel-Institute/MethylScore-nf/raw/travis/ref.fasta'
-
 script:
-  - nextflow run ${TRAVIS_BUILD_DIR} --GENOME=$FASTA --SAMPLE_SHEET=$SHEET -profile local,docker
+  - nextflow run ${TRAVIS_BUILD_DIR} -profile testing,docker
