--- a/nextflow.config
+++ b/nextflow.config
@@ -26,4 +26,5 @@ profiles {
   singularity { singularity.enabled = true }
   docker { docker.enabled = true }
   conda { process.conda = "$baseDir/environment.yaml" }
+  testing { includeConfig 'conf/testing.config' }
 }
