--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,8 @@ process.container = 'beckerlab/methylscore:latest'
 manifest {
     homePage = 'https://github.com/Gregor-Mendel-Institute/MethylScore-nf'
     description = "A nextflow implementation of Computomics' MethylScore pipeline"
+    name = 'MethylScore'
+    version = '0.1.14-nf'
     mainScript = 'main.nf'
     nextflowVersion = '>=19.01.0'
 }
@@ -27,4 +29,45 @@ profiles {
   docker { docker.enabled = true }
   conda { process.conda = "$baseDir/environment.yaml" }
   testing { includeConfig 'conf/testing.config' }
+}
+
+// Default parameters
+params {
+  GENOME = false
+  SAMPLE_SHEET = false
+  BEDGRAPH = false
+  PROJECT_FOLDER = "./results"
+
+  HUMAN = false
+  ROI = false
+
+  STATISTICS = true
+  IGV = false
+  DO_DEDUP = true
+
+  // DMR parameters
+  MR_FREQ_CHANGE = 20
+  MR_FREQ_DISTANCE = 30
+  CLUSTER_MIN_METH = 20
+  CLUSTER_MIN_METH_DIFF = 20
+  SLIDING_WINDOW_SIZE = 0
+  SLIDING_WINDOW_STEP = 0
+  DMR_MIN_C = 10
+  DMR_MIN_COV = 3
+  MR_BATCH_SIZE = 500
+  HDMR_FOLD_CHANGE = 3
+  FDR_CUTOFF = 0.05
+
+  // Consensus parameters
+  MIN_QUAL = 30
+  IGNORE_FIRST_BP = 3
+  IGNORE_LAST_BP = 1
+
+  // MR parameters
+  MIN_COVERAGE = 1
+  MR_MIN_C = 20
+  DESERT_SIZE = 100
+  TRIM_METHRATE = 10
+  MERGE_DIST = 30
+  MR_PARAMS = false
 }
