move completion handler to nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -71,3 +71,11 @@ params {
   MERGE_DIST = 30
   MR_PARAMS = false
 }
+
+workflow.onComplete = {
+    if ( workflow.success ) {
+      println "[$workflow.complete] >> MethylScore finished SUCCESSFULLY after $workflow.duration and found ${DMRs.getVal().countLines()} DMRs"
+    } else {
+      println "[$workflow.complete] >> MethylScore finished with ERRORS after $workflow.duration"
+    }
+}
