add AUTOTRIM parameter
If set to true, MethylScore now uses the trimming settings inferred by MethylDackel mbias for consensus calling
This also adds a warning that gets printed to inform the user to have a look at the mbias plots.
Further changes:
* Default trimming settings are now set to zero
* IGV output should work again (accidentally removed the path to the python script in a previous commit)

--- a/example_config.yaml
+++ b/example_config.yaml
@@ -91,8 +91,11 @@ MR_PARAMS : false
 # Minimum mapping quality of reads to consider (influenced by ploidy level!)
 MIN_QUAL : 30
 
-# Disregard first bases of each read for consensus calling
-IGNORE_FIRST_BP : 3
+# Disregard bases of original top strand for consensus calling (r1_start,r1_end,r2_start,r2_end)
+IGNORE_OT : 0,0,0,0
 
-# Disregard last bases of each read for consensus calling
-IGNORE_LAST_BP : 1
+# Disregard bases of original bottom strand for consensus calling (r1_start,r1_end,r2_start,r2_end)
+IGNORE_OB : 0,0,0,0
+
+# Infer read trimming from MethylDackel mbias output (will override IGNORE_OT and IGNORE_OB settings)
+AUTOTRIM : false
