--- a/nextflow.config
+++ b/nextflow.config
@@ -60,8 +60,9 @@ params {
 
   // Consensus parameters
   MIN_QUAL = 30
-  IGNORE_FIRST_BP = 3
-  IGNORE_LAST_BP = 1
+  AUTOTRIM = false
+  IGNORE_OT = "0,0,0,0"
+  IGNORE_OB = "0,0,0,0"
 
   // MR parameters
   MIN_COVERAGE = 1
