add config for EpiDiverse server

--- a/nextflow.config
+++ b/nextflow.config
@@ -25,6 +25,7 @@ profiles {
   local { process.executor = 'local' }
   mendel { includeConfig 'conf/mendel.config' }
   cbe { includeConfig 'conf/cbe.config' }
+  epi { includeConfig 'conf/EpiDiverse.config' }
   singularity { singularity.enabled = true }
   docker { docker.enabled = true }
   conda { process.conda = "$baseDir/environment.yaml" }
