--- a/nextflow.config
+++ b/nextflow.config
@@ -46,6 +46,14 @@ params {
   DO_DEDUP = true
 
   // DMR parameters
+  DMR_CONTEXTS = 'CG,CHG,CHH'
+  DMRS_PER_CONTEXT = true
+  CLUSTER_MIN_METH_DIFF_CG = 20
+  CLUSTER_MIN_METH_DIFF_CHG = 20
+  CLUSTER_MIN_METH_DIFF_CHH = 20
+  CLUSTER_MIN_METH_CG = 20
+  CLUSTER_MIN_METH_CHG = 20
+  CLUSTER_MIN_METH_CHH = 20
   MR_FREQ_CHANGE = 20
   MR_FREQ_DISTANCE = 30
   CLUSTER_MIN_METH = 20
