add METRICS parameter
this enables nextflows timeline, trace, report and dag output

--- a/example_config.yaml
+++ b/example_config.yaml
@@ -25,6 +25,9 @@ ROI : false
 # Output basic statistics?
 STATISTICS : true
 
+# Output pipeline metrics (report, timeline, trace, dag)?
+METRICS : true
+
 # Perform read de-duplication?
 DO_DEDUP : true
 
