--- a/nextflow.config
+++ b/nextflow.config
@@ -37,6 +37,7 @@ params {
   SAMPLE_SHEET = false
   BEDGRAPH = false
   PROJECT_FOLDER = "./results"
+  METRICS = true
 
   HUMAN = false
   ROI = false
@@ -79,6 +80,25 @@ params {
   TRIM_METHRATE = 10
   MERGE_DIST = 30
   MR_PARAMS = false
+}
+
+if (params.METRICS) {
+  timeline {
+    enabled = true
+    file = "${params.PROJECT_FOLDER}/MethylScore_timeline.html"
+  }
+  report {
+    enabled = true
+    file = "${params.PROJECT_FOLDER}/MethylScore_report.html"
+  }
+  trace {
+    enabled = true
+    file = "${params.PROJECT_FOLDER}/MethylScore_trace.txt"
+  }
+  dag {
+    enabled = true
+    file = "${params.PROJECT_FOLDER}/MethylScore_graph.svg"
+  }
 }
 
 workflow.onComplete = {
