minimise resource requests
based on typical A. thaliana samples. YMMV

--- a/conf/base.config
+++ b/conf/base.config
@@ -5,63 +5,69 @@
 
 process {
   withName: MethylScore_mergeReplicates {
-  	cpus = { 1 * task.attempt }
-  	memory = {2.GB * task.attempt }
-  	time = { 1.h * task.attempt }
+  	cpus = 1
+  	memory = {512.MB * task.attempt }
+  	time = { 30.m * task.attempt }
   }
 
   withName: MethylScore_deduplicate {
-  	cpus = { 1 * task.attempt }
+  	cpus = 1
   	memory = { 6.GB * task.attempt }
-  	time = { 8.h * task.attempt }
+  	time = { 30.m * task.attempt }
+  }
+
+  withName: MethylScore_readStatistics {
+  	cpus = 1
+  	memory = {512.MB * task.attempt }
+  	time = { 30.m * task.attempt }
   }
 
   withName: MethylScore_splitBams {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
+  	cpus = 1
+  	memory = { 256.MB * task.attempt }
+  	time = { 20.m * task.attempt }
   }
 
   withName: MethylScore_callConsensus {
-  	cpus = { 1 * task.attempt }
-  	memory = { 6.GB * task.attempt }
-  	time = { 8.h * task.attempt }
+  	cpus = 1
+  	memory = { 256.MB * task.attempt }
+  	time = { 20.m * task.attempt }
   }
 
   withName: MethylScore_chromosomalmatrix {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
+  	cpus = 1
+  	memory = { 256.MB * task.attempt }
+  	time = { 20.m * task.attempt }
   }
 
   withName: MethylScore_callMRs {
-  	cpus = { 1 * task.attempt }
-  	memory = { 6.GB * task.attempt }
+  	cpus = 1
+  	memory = { 8.GB * task.attempt }
   	time = { 4.h * task.attempt }
   }
 
   withName: MethylScore_igv {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
+  	cpus = 1
+  	memory = { 256.MB * task.attempt }
+  	time = { 20.m * task.attempt }
   }
 
   withName: MethylScore_splitMRs {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
+  	cpus = 1
+  	memory = { 256.MB * task.attempt }
+  	time = { 10.m * task.attempt }
   }
 
   withName: MethylScore_callDMRs {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 2.h * task.attempt }
+  	cpus = 1
+  	memory = { 256.MB * task.attempt }
+  	time = { 20.m * task.attempt }
   }
 
   withName: MethylScore_mergeDMRs {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
+  	cpus = 1
+  	memory = { 256.MB * task.attempt }
+  	time = { 10.m * task.attempt }
   }
   errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
   maxRetries = 3
