fix completion message
for context-specific runs, the DMR files need to be collected, otherwise only one context will be taken into consideration when counting regions

--- a/nextflow.config
+++ b/nextflow.config
@@ -103,7 +103,7 @@ if (params.METRICS) {
 
 workflow.onComplete = {
     if ( workflow.success ) {
-      println "[$workflow.complete] >> MethylScore finished SUCCESSFULLY after $workflow.duration and found ${DMRs.getVal().countLines()} DMRs"
+      println "[$workflow.complete] >> MethylScore finished SUCCESSFULLY after $workflow.duration and found ${DMRs.collectFile(name: 'allDMRs.bed').getVal().countLines()} DMRs"
     } else {
       println "[$workflow.complete] >> MethylScore finished with ERRORS after $workflow.duration"
     }
