change dag fileformat to png

--- a/nextflow.config
+++ b/nextflow.config
@@ -97,7 +97,7 @@ if (params.METRICS) {
   }
   dag {
     enabled = true
-    file = "${params.PROJECT_FOLDER}/MethylScore_graph.svg"
+    file = "${params.PROJECT_FOLDER}/MethylScore_graph.png"
   }
 }
 
