configure TMPDIR depending on cluster
On MENDEL, /tmp is redirected to memory and configured with a rather small quota.
Thus export relevant temporary directories to another location that has more space available.
This is not needed for cbe because the relevant variables are by default configured to point to the
per-user-instantiated /tmp on scratch-cbe

--- a/conf/mendel.config
+++ b/conf/mendel.config
@@ -5,6 +5,7 @@
 
 env {
    TMPDIR = "${PWD}/work"
+   _JAVA_OPTIONS="-Djava.io.tmpdir=${PWD}/work"
    PAR_TEMP = "${PWD}/work"
    PAR_GLOBAL_TMPDIR = "${PWD}/work"
 }
