tune resource requests

--- a/conf/base.config
+++ b/conf/base.config
@@ -6,38 +6,38 @@
 process {
   withName: MethylScore_mergeReplicates {
   	cpus = 1
-  	memory = {512.MB * task.attempt }
+  	memory = {256.MB * task.attempt }
   	time = { 30.m * task.attempt }
   }
 
   withName: MethylScore_deduplicate {
   	cpus = 1
-  	memory = { 6.GB * task.attempt }
-  	time = { 30.m * task.attempt }
+  	memory = { 8.GB * task.attempt }
+  	time = { 1.h * task.attempt }
   }
 
   withName: MethylScore_readStatistics {
   	cpus = 1
   	memory = {512.MB * task.attempt }
-  	time = { 30.m * task.attempt }
+  	time = { 1.h * task.attempt }
   }
 
   withName: MethylScore_splitBams {
   	cpus = 1
   	memory = { 256.MB * task.attempt }
-  	time = { 20.m * task.attempt }
+  	time = { 1.h * task.attempt }
   }
 
   withName: MethylScore_callConsensus {
   	cpus = 1
   	memory = { 256.MB * task.attempt }
-  	time = { 20.m * task.attempt }
+  	time = { 30.m * task.attempt }
   }
 
   withName: MethylScore_chromosomalmatrix {
   	cpus = 1
   	memory = { 256.MB * task.attempt }
-  	time = { 20.m * task.attempt }
+  	time = { 30.m * task.attempt }
   }
 
   withName: MethylScore_callMRs {
@@ -49,7 +49,7 @@ process {
   withName: MethylScore_igv {
   	cpus = 1
   	memory = { 256.MB * task.attempt }
-  	time = { 20.m * task.attempt }
+  	time = { 30.m * task.attempt }
   }
 
   withName: MethylScore_splitMRs {
@@ -60,13 +60,13 @@ process {
 
   withName: MethylScore_callDMRs {
   	cpus = 1
-  	memory = { 256.MB * task.attempt }
-  	time = { 20.m * task.attempt }
+  	memory = { 128.MB * task.attempt }
+  	time = { 10.m * task.attempt }
   }
 
   withName: MethylScore_mergeDMRs {
   	cpus = 1
-  	memory = { 256.MB * task.attempt }
+  	memory = { 128.MB * task.attempt }
   	time = { 10.m * task.attempt }
   }
   errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
