--- a/conf/cbe.config
+++ b/conf/cbe.config
@@ -3,9 +3,13 @@
  * -------------------------------------------------
  */
 
-singularity.autoMounts = true
-
 process {
   executor = 'slurm'
-  module = 'singularity/3.1.0:anaconda3/2019.03'
+  module = 'singularity/3.4.1:anaconda3/2019.10'
+  queue = { task.memory <= 170.GB ? 'c' : 'm' }
+  clusterOptions = { task.time <= 8.h ? '--qos short': task.time <= 48.h ? '--qos medium' : '--qos long' }
+}
+
+singularity {
+  cacheDir = '/resources/containers'
 }
