enable podman support; bump required nf version

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,7 +16,7 @@ manifest {
     name = 'MethylScore'
     version = '0.1.16-nf'
     mainScript = 'main.nf'
-    nextflowVersion = '>=19.01.0'
+    nextflowVersion = '>=20.01.0'
 }
 
 includeConfig 'conf/base.config'
@@ -25,6 +25,7 @@ profiles {
   local { process.executor = 'local' }
   cbe { includeConfig 'conf/cbe.config' }
   singularity { singularity.enabled = true }
+  podman { podman.enabled =  true }
   docker { docker.enabled = true }
   conda { process.conda = "$baseDir/environment.yaml" }
   testing { includeConfig 'conf/testing.config' }
