--- a/conf/base.config
+++ b/conf/base.config
@@ -3,6 +3,10 @@
  * -------------------------------------------------
  */
 
+env {
+   PAR_GLOBAL_TMPDIR = "${PWD}/work"
+}
+
 process {
   withName: MethylScore_mergeReplicates {
   	cpus = 1
@@ -60,8 +64,8 @@ process {
 
   withName: MethylScore_callDMRs {
   	cpus = 1
-  	memory = { 128.MB * task.attempt }
-  	time = { 10.m * task.attempt }
+  	memory = { 256.GB * task.attempt }
+  	time = { 1.h * task.attempt }
   }
 
   withName: MethylScore_mergeDMRs {
