--- a/conf/base.config
+++ b/conf/base.config
@@ -64,7 +64,7 @@ process {
 
   withName: MethylScore_callDMRs {
   	cpus = 1
-  	memory = { 256.GB * task.attempt }
+  	memory = { 256.MB * task.attempt }
   	time = { 1.h * task.attempt }
   }
 
