use plain perl scripts
* switch the PAR packed binaries with source files
* update docker file to include perl module dependencies

Note that this breaks the conda profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,7 @@
  * name here.
  */
 
-process.container = 'beckerlab/methylscore:latest'
+process.container = 'docker.artifactory.imp.ac.at/becker/methylscore:master'
 
 manifest {
     homePage = 'https://github.com/Gregor-Mendel-Institute/MethylScore-nf'
