--- a/conf/base.config
+++ b/conf/base.config
@@ -25,7 +25,7 @@ process {
   withName: MethylScore_splitBams {
   	cpus = 1
   	memory = { 256.MB * task.attempt }
-  	time = { 1.h * task.attempt }
+  	time = { 2.h * task.attempt }
   }
 
   withName: MethylScore_callConsensus {
@@ -36,8 +36,8 @@ process {
 
   withName: MethylScore_chromosomalmatrix {
   	cpus = 1
-  	memory = { 256.MB * task.attempt }
-  	time = { 30.m * task.attempt }
+  	memory = { 2.GB * task.attempt }
+  	time = { 4.h * task.attempt }
   }
 
   withName: MethylScore_callMRs {
