speed up position-sorting for large-scale runs
when running the pipeline with hundreds of samples, sorting the genome matrix input was very time consuming

this commit makes sure consensus files are already position sorted and have the sample ID in column 0, as this is what
generate_genome_matrix.pl expects.
the consensus file are already split by chromosome, so there is no need to sort by chromosome and a merge sort is sufficient to satisfy the
-f flag of generate_genome_matrix.pl

this commit also:
* removes the AUTOTRIM option (trimming should be done before running MethylScore)
* adds the --METHYLPY parameter that can be set together with --BEDGRAPH to process allC output from methylpy

--- a/nextflow.config
+++ b/nextflow.config
@@ -24,6 +24,7 @@ params {
   GENOME = false
   SAMPLE_SHEET = false
   BEDGRAPH = false
+  METHYLPY = false
   PROJECT_FOLDER = "./results"
   METRICS = true
 
@@ -57,7 +58,6 @@ params {
 
   // Consensus parameters
   MIN_QUAL = 30
-  AUTOTRIM = false
   IGNORE_OT = "0,0,0,0"
   IGNORE_OB = "0,0,0,0"
 
