set C locale to speed up GNU sort

--- a/conf/base.config
+++ b/conf/base.config
@@ -3,6 +3,11 @@
  * -------------------------------------------------
  */
 
+
+env {
+  LC_ALL=C
+}
+
 process {
   withName: MethylScore_mergeReplicates {
   	cpus = 1
