--- a/conf/testing.config
+++ b/conf/testing.config
@@ -3,5 +3,11 @@
  * -------------------------------------------------
  */
 
+process {
+    withName: MethylScore_deduplicate {
+        memory = { 4.GB }
+    }
+}
+
 params.SAMPLE_SHEET = params.BEDGRAPH ? 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/samplesheet_bedGraph.tsv' : 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/samplesheet.tsv'
 params.GENOME = 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/ref.fasta'
