--- a/conf/base.config
+++ b/conf/base.config
@@ -11,8 +11,8 @@ env {
 process {
   withName: MethylScore_mergeReplicates {
   	cpus = 1
-  	memory = {256.MB * task.attempt }
-  	time = { 30.m * task.attempt }
+  	memory = { 16.GB * task.attempt }
+  	time = { 8.h * task.attempt }
   }
 
   withName: MethylScore_deduplicate {
@@ -35,20 +35,20 @@ process {
 
   withName: MethylScore_callConsensus {
   	cpus = 1
-  	memory = { 256.MB * task.attempt }
-  	time = { 30.m * task.attempt }
+  	memory = { 1.GB * task.attempt }
+  	time = { 2.h * task.attempt }
   }
 
   withName: MethylScore_chromosomalmatrix {
-  	cpus = 1
-  	memory = { 2.GB * task.attempt }
+  	cpus = 8
+  	memory = { 4.GB * task.attempt }
   	time = { 4.h * task.attempt }
   }
 
   withName: MethylScore_callMRs {
   	cpus = 1
   	memory = { 8.GB * task.attempt }
-  	time = { 4.h * task.attempt }
+  	time = { 8.h * task.attempt }
   }
 
   withName: MethylScore_igv {
@@ -58,14 +58,15 @@ process {
   }
 
   withName: MethylScore_splitMRs {
-  	cpus = 1
-  	memory = { 256.MB * task.attempt }
-  	time = { 10.m * task.attempt }
+  	cpus = 4
+  	memory = { 16.GB * task.attempt }
+  	time = { 8.h * task.attempt }
   }
 
   withName: MethylScore_callDMRs {
+  	errorStrategy = { task.exitStatus == 25 ? 'ignore' : 'finish' }
   	cpus = 1
-  	memory = { 256.MB * task.attempt }
+  	memory = { 2.GB * task.attempt }
   	time = { 2.h * task.attempt }
   }
 
@@ -74,6 +75,7 @@ process {
   	memory = { 128.MB * task.attempt }
   	time = { 10.m * task.attempt }
   }
+
   errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
   maxRetries = 3
   maxErrors = '-1'
