make sure testing profile runs on github actions

--- a/conf/testing.config
+++ b/conf/testing.config
@@ -4,9 +4,8 @@
  */
 
 process {
-    withName: 'MethylScore_deduplicate|MethylScore_callMRs' { memory = 4.GB }
+    withName: 'MethylScore_mergeReplicates|MethylScore_deduplicate|MethylScore_callMRs|MethylScore_splitMRs' { memory = 6.GB }
 }
-
 
 params.SAMPLE_SHEET = params.BEDGRAPH ? 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/samplesheet_bedGraph.tsv' : 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/samplesheet.tsv'
 params.GENOME = 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/ref.fasta'
