github actions: limit number of cpus

--- a/conf/testing.config
+++ b/conf/testing.config
@@ -4,7 +4,10 @@
  */
 
 process {
-    withName: 'MethylScore_mergeReplicates|MethylScore_deduplicate|MethylScore_callMRs|MethylScore_splitMRs' { memory = 6.GB }
+    withName: 'MethylScore_mergeReplicates|MethylScore_deduplicate|MethylScore_callMRs|MethylScore_splitMRs' { 
+	cpus = 2
+	memory = 6.GB 
+    }
 }
 
 params.SAMPLE_SHEET = params.BEDGRAPH ? 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/samplesheet_bedGraph.tsv' : 'https://github.com/Gregor-Mendel-Institute/test-data/raw/MethylScore/samplesheet.tsv'
