--- a/nextflow.config
+++ b/nextflow.config
@@ -11,11 +11,12 @@
 process.container = 'beckerlab/methylscore:dev'
 
 manifest {
-    homePage = 'https://github.com/Gregor-Mendel-Institute/MethylScore-nf'
+    homePage = 'https://github.com/Computomics/MethylScore'
     description = "A nextflow implementation of Computomics' MethylScore pipeline"
     name = 'MethylScore'
     version = '0.1.16-nf'
     mainScript = 'main.nf'
+    defaultBranch = 'nextflow'
     nextflowVersion = '>=20.01.0'
 }
 
