--- a/nextflow.config
+++ b/nextflow.config
@@ -25,7 +25,9 @@ params {
   GENOME = false
   SAMPLE_SHEET = false
   BEDGRAPH = false
+  MATRIX = false
   METHYLPY = false
+  PAIRWISE = false
   PROJECT_FOLDER = "./results"
   METRICS = true
 
