--- a/conf/cbe.config
+++ b/conf/cbe.config
@@ -3,13 +3,84 @@
  * -------------------------------------------------
  */
 
+singularity {
+  enabled = true
+  cacheDir = '/resources/containers'
+}
+
 process {
   executor = 'slurm'
   queue = { task.memory <= 170.GB ? 'c' : 'm' }
   clusterOptions = { task.time <= 8.h ? '--qos short': task.time <= 48.h ? '--qos medium' : '--qos long' }
-}
 
-singularity {
-  enabled = true
-  cacheDir = '/resources/containers'
+  withName: GET_CONSENSUS {
+  	cpus = 1
+  	memory = { 16.GB * task.attempt }
+  	time = { 4.h * task.attempt }
+  }
+
+  withName: DEDUP {
+  	cpus = 1
+  	memory = { 16.GB * task.attempt }
+  	time = { 2.h * task.attempt }
+  }
+
+  withName: STATISTICS {
+  	cpus = 1
+  	memory = {512.MB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: SPLIT_BEDGRAPH {
+  	cpus = 1
+  	memory = { 4.GB * task.attempt }
+  	time = { 2.h * task.attempt }
+  }
+
+  withName: INDEX {
+  	cpus = 8
+  	memory = { 8.GB * task.attempt }
+  	time = { 16.h * task.attempt }
+  }
+
+  withName: MATRIX {
+  	cpus = 1
+  	memory = { 8.GB * task.attempt }
+  	time = { 16.h * task.attempt }
+  }
+
+  withName: CALL_MRS {
+  	cpus = 1
+  	memory = { 8.GB * task.attempt }
+  	time = { 8.h * task.attempt }
+  }
+
+  withName: MATRIX_TO_IGV {
+  	cpus = 1
+  	memory = { 256.MB * task.attempt }
+  	time = { 30.m * task.attempt }
+  }
+
+  withName: SPLIT_MRS {
+  	cpus = 1
+  	memory = { 4.GB * task.attempt }
+  	time = { 4.h * task.attempt }
+  }
+
+  withName: CALL_DMRS {
+  	errorStrategy = { task.exitStatus == 25 ? 'ignore' : 'finish' }
+  	cpus = 1
+  	memory = { 2.GB * task.attempt }
+  	time = { 1.h * task.attempt }
+  }
+
+  withName: MERGE_DMRS {
+  	cpus = 1
+  	memory = { 128.MB * task.attempt }
+  	time = { 10.m * task.attempt }
+  }
+
+  errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
+  maxRetries = 3
+  maxErrors = '-1'
 }
