--- a/conf/base.config
+++ b/conf/base.config
@@ -9,71 +9,55 @@ env {
 }
 
 process {
-  withName: CONSENSUS {
-  	cpus = 1
-  	memory = { 16.GB * task.attempt }
-  	time = { 4.h * task.attempt }
+
+  withName: BUILD {
+  	cpus = 2
+  	memory = { 4.GB * task.attempt }
   }
 
   withName: DEDUP {
-  	cpus = 1
-  	memory = { 16.GB * task.attempt }
-  	time = { 2.h * task.attempt }
+  	cpus = 2
+  	memory = { 4.GB * task.attempt }
   }
 
   withName: STATISTICS {
   	cpus = 1
   	memory = {512.MB * task.attempt }
-  	time = { 1.h * task.attempt }
   }
 
   withName: SPLIT {
   	cpus = 1
   	memory = { 4.GB * task.attempt }
-  	time = { 2.h * task.attempt }
   }
 
   withName: INDEX {
-  	cpus = 2
-  	memory = { 16.GB * task.attempt }
-  	time = { 12.h * task.attempt }
-  }
-
-  withName: MATRIX {
-  	cpus = 1
-  	memory = { 4.GB * task.attempt }
-  	time = { 16.h * task.attempt }
+    cpus = 2
+  	memory = { 8.GB * task.attempt }
   }
 
   withName: CALL_MRS {
-  	cpus = 1
-  	memory = { 8.GB * task.attempt }
-  	time = { 8.h * task.attempt }
+  	cpus = 2
+  	memory = { 4.GB * task.attempt }
   }
 
   withName: MATRIX_TO_IGV {
   	cpus = 1
   	memory = { 256.MB * task.attempt }
-  	time = { 30.m * task.attempt }
   }
 
   withName: SPLIT_MRS {
   	cpus = 1
   	memory = { 4.GB * task.attempt }
-  	time = { 4.h * task.attempt }
   }
 
   withName: CALL_DMRS {
-  	errorStrategy = { task.exitStatus == 25 ? 'ignore' : 'finish' }
   	cpus = 1
   	memory = { 2.GB * task.attempt }
-  	time = { 1.h * task.attempt }
   }
 
   withName: MERGE_DMRS {
   	cpus = 1
   	memory = { 128.MB * task.attempt }
-  	time = { 10.m * task.attempt }
   }
 
   errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
